<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Go Explore!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_home">Home</string>
    <string name="action_paths">Core Paths</string>
    <string name="action_wildlife">Wildlife Guide</string>
    <string name="action_logbook">Your Log Book</string>
    <string name="action_about">About this App</string>
    <string name="title_activity_start">Go Explore!</string>
    <string name="button_start_core_paths">Core Paths</string>
    <string name="button_start_wildlife">Wildlife Guide</string>
    <string name="button_start_logbook">Your Log Book</string>
    <string name="button_start_about">About this app</string>
    <string name="title_activity_paths_list">Core Paths in East Lothian</string>
    <string name="title_routes_list_tab">List View</string>
    <string name="title_routes_map_tab">Map View</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="route_detail_surface_label">Surface</string>
    <string name="title_activity_wildlife_guide">Wildlife in East Lothian</string>
    <string name="title_activity_wildlife_detail">WildlifeDetail</string>
    <string name="title_activity_log_book">Your Logbook</string>
    <string name="title_activity_new_log_entry">Log a new sighting</string>
    <string name="title_activity_location_picker">Pick a location</string>
    <string name="title_activity_log_entry">LogEntryActivity</string>
    <string name="title_activity_about">About the app</string>
    <string name="about_text">This software has been developed as part of Nesta Scotland\'s Code for Europe programme for East Lothian Council.</string>
    <string name="about_licence">All code is Open Source and available on the Civic Exchange.</string>
    <string name="about_credits">Product Managed by Matt Jones\nBuilt by David Morrison\nDesigned by Jen Thomson\n\nThis app makes use of Pkmmte Xeleon\'s <a href="https://github.com/Pkmmte/CircularImageView/">CircularImageView library</a> which is released under the <a href="https://github.com/Pkmmte/CircularImageView/blob/master/LICENSE">MIT licence.</a>\n\nThis is a beta version of the app.  Let us know what you think by emailing <a href="mailto:webapps@eastlothian.gov.uk">webapps@eastlothian.gov.uk</a>."</string>
    <string name="title_activity_log_book_sighting_detail">Sighting</string>
    <string name="action_settings">Settings</string>

</resources>
