<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_paths"
        android:title="@string/action_paths"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_wildlife"
        android:title="@string/action_wildlife"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_logbook"
        android:title="@string/action_logbook"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
