<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="uk.gov.eastlothian.gowalk.ui.AboutActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:gravity="center_vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/short_eared_owl"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_text"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_vertical_margin"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_licence"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/about_credits"
        android:id="@+id/about_people"
        android:padding="@dimen/activity_vertical_margin" />

    </LinearLayout>

    </ScrollView>
</LinearLayout>
